--- a/frontend/package.json
+++ b/frontend/package.json
@@ -64,6 +64,7 @@
     },
     "optionalDependencies": {
         "@rollup/rollup-linux-x64-gnu": "^4.0.0",
-        "@rollup/rollup-linux-x64-musl": "^4.0.0"
+        "@rollup/rollup-linux-x64-musl": "^4.0.0",
+        "@esbuild/linux-x64": "^0.19.0"
     }
 }
