feat(bidding): single-signature escrow, fee to , rename x402 to escrow, expanded tests
- useEscrow: on-chain allowance check (skip approve if sufficient), proper PreparedEscrowTx type, gas fallback 500k->350k
- BidPanel: auto-populate reveal from localStorage, USDC 6-decimal precision fix
- RTBEscrow: redeployed to Base Sepolia (0xff5d18a9...4761DbDB) with createAndFundEscrow
- escrow.service.ts: new canonical entry-point, socket.ts import updated
- Tests: +5 createAndFundEscrow Hardhat, +1 auction tie, +1 prepareEscrowTx (75 total)
- current-status.md: escrow marked production-ready, TD-12 resolved
- Convenience fee:  ->  across all files

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -79,3 +79,10 @@ USE_MOCK_DATA=false
 # Get a key at https://platform.moonshot.cn/
 # Set the real key in your hosting platform's env vars — never commit it.
 KIMI_API_KEY=sk-...
+
+# Confidential HTTP — Experimental (STUB only)
+# Enables the Confidential HTTP workflow for quality scoring.
+# When true, scoring data is fetched through the CHTT client stub
+# (simulated enclave execution). When false (default), direct DB scoring is used.
+# Reference: https://docs.chain.link/cre/capabilities/confidential-http-ts
+USE_CONFIDENTIAL_HTTP=false
