--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,8 @@
         "demo:clear": "tsx scripts/seed-demo-leads.ts clear"
     },
     "dependencies": {
+        "@langchain/community": "^1.1.15",
+        "@langchain/core": "^1.1.24",
         "@prisma/client": "^5.10.2",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
@@ -35,11 +37,12 @@
         "helmet": "^7.1.0",
         "js-yaml": "^4.1.1",
         "jsonwebtoken": "^9.0.2",
+        "langchain": "^1.2.24",
         "node-cron": "^4.2.1",
         "socket.io": "^4.7.4",
         "swagger-ui-express": "^5.0.1",
         "uuid": "^9.0.1",
-        "zod": "^3.22.4"
+        "zod": "^3.25.76"
     },
     "devDependencies": {
         "@faker-js/faker": "^10.3.0",
@@ -55,6 +58,7 @@
         "@typescript-eslint/eslint-plugin": "^8.55.0",
         "@typescript-eslint/parser": "^8.55.0",
         "artillery": "^2.0.5",
+        "artillery-plugin-expect": "^2.24.0",
         "cross-env": "^10.1.0",
         "eslint": "^8.57.0",
         "jest": "^29.7.0",
@@ -64,7 +68,6 @@
         "ts-jest": "^29.1.2",
         "ts-node": "^10.9.2",
         "ts-node-dev": "^2.0.0",
-        "typescript": "^5.4.2",
-        "artillery-plugin-expect": "^2.24.0"
+        "typescript": "^5.4.2"
     }
 }
