--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,7 +32,7 @@ jobs:
           cache: npm
 
       - name: Install dependencies
-        run: npm ci
+        run: npm ci --ignore-optional
 
       - name: Lint backend
         working-directory: backend
@@ -70,7 +70,7 @@ jobs:
           cache: npm
 
       - name: Install dependencies
-        run: npm ci
+        run: npm ci --ignore-optional
 
       - name: Generate Prisma client
         working-directory: backend
@@ -113,7 +113,7 @@ jobs:
           cache: npm
 
       - name: Install dependencies
-        run: npm ci
+        run: npm ci --ignore-optional
 
       - name: Compile contracts
         working-directory: contracts
@@ -182,7 +182,7 @@ jobs:
           cache: npm
 
       - name: Install dependencies
-        run: npm ci
+        run: npm ci --ignore-optional
 
       - name: Generate Prisma & push schema
         working-directory: backend
