--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,7 @@ concurrency:
 env:
   NODE_VERSION: "22"
   TEST_MODE: "true"
+  npm_config_optional: "false"
   JWT_SECRET: ${{ secrets.JWT_SECRET || 'ci-test-jwt-secret-not-for-production-use-only' }}
 
 # ════════════════════════════════════════════════════════════
@@ -32,7 +33,7 @@ jobs:
           cache: npm
 
       - name: Install dependencies
-        run: npm ci --ignore-optional
+        run: npm ci
 
       - name: Lint backend
         working-directory: backend
@@ -70,7 +71,7 @@ jobs:
           cache: npm
 
       - name: Install dependencies
-        run: npm ci --ignore-optional
+        run: npm ci
 
       - name: Generate Prisma client
         working-directory: backend
@@ -113,7 +114,7 @@ jobs:
           cache: npm
 
       - name: Install dependencies
-        run: npm ci --ignore-optional
+        run: npm ci
 
       - name: Compile contracts
         working-directory: contracts
@@ -182,7 +183,7 @@ jobs:
           cache: npm
 
       - name: Install dependencies
-        run: npm ci --ignore-optional
+        run: npm ci
 
       - name: Generate Prisma & push schema
         working-directory: backend
