--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,6 @@ concurrency:
 env:
   NODE_VERSION: "22"
   TEST_MODE: "true"
-  npm_config_optional: "false"
   JWT_SECRET: ${{ secrets.JWT_SECRET || 'ci-test-jwt-secret-not-for-production-use-only' }}
 
 # ════════════════════════════════════════════════════════════
@@ -33,7 +32,9 @@ jobs:
           cache: npm
 
       - name: Install dependencies
-        run: npm ci
+        run: |
+          echo "omit=optional" >> .npmrc
+          npm ci
 
       - name: Lint backend
         working-directory: backend
@@ -71,7 +72,9 @@ jobs:
           cache: npm
 
       - name: Install dependencies
-        run: npm ci
+        run: |
+          echo "omit=optional" >> .npmrc
+          npm ci
 
       - name: Generate Prisma client
         working-directory: backend
@@ -114,7 +117,9 @@ jobs:
           cache: npm
 
       - name: Install dependencies
-        run: npm ci
+        run: |
+          echo "omit=optional" >> .npmrc
+          npm ci
 
       - name: Compile contracts
         working-directory: contracts
@@ -183,7 +188,9 @@ jobs:
           cache: npm
 
       - name: Install dependencies
-        run: npm ci
+        run: |
+          echo "omit=optional" >> .npmrc
+          npm ci
 
       - name: Generate Prisma & push schema
         working-directory: backend
