--- a/backend/.env.example
+++ b/backend/.env.example
@@ -35,6 +35,12 @@ ESCROW_CONTRACT_ADDRESS=
 LEAD_NFT_CONTRACT_ADDRESS_BASE_SEPOLIA=
 ESCROW_CONTRACT_ADDRESS_BASE_SEPOLIA=
 CRE_CONTRACT_ADDRESS_BASE_SEPOLIA=
+MARKETPLACE_ADDRESS=
+VERTICAL_NFT_ADDRESS=
+VERTICAL_AUCTION_ADDRESS=
+VRF_TIE_BREAKER_ADDRESS=
+BOUNTY_MATCHER_ADDRESS=
+BOUNTY_POOL_ADDRESS=
 
 # CRE DON API Key (for Chainlink Functions scoring-data endpoint)
 CRE_API_KEY=
@@ -86,3 +92,13 @@ KIMI_API_KEY=sk-...
 # (simulated enclave execution). When false (default), direct DB scoring is used.
 # Reference: https://docs.chain.link/cre/capabilities/confidential-http-ts
 USE_CONFIDENTIAL_HTTP=false
+
+# Bounty Functions — Experimental
+# Enables Chainlink Functions-based bounty matching.
+BOUNTY_FUNCTIONS_ENABLED=false
+
+# MCP Agent Server
+MCP_SERVER_URL=http://localhost:3002
+
+# Test Mode — bypass certain guards in development
+TEST_MODE=false
