--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,29 +1,45 @@
 # Frontend Environment Variables (Vite)
 # For local development: copy to .env.local
 # For Vercel: set these in the Vercel dashboard
+# All vars must be prefixed with VITE_ for Vite to expose them.
 
-# API URL — local dev uses Vite proxy, production uses full URL
+# ── API ──────────────────────────────────────────────────
 VITE_API_URL=http://localhost:3001
+VITE_SOCKET_URL=http://localhost:3001
 
-# WalletConnect (get from cloud.walletconnect.com)
+# ── Wallet / RPC ─────────────────────────────────────────
 VITE_WALLETCONNECT_PROJECT_ID=
-
-# Alchemy
 VITE_ALCHEMY_API_KEY=
-
-# Chain config
-VITE_DEFAULT_CHAIN_ID=11155111
+VITE_RPC_URL_SEPOLIA=https://eth-sepolia.g.alchemy.com/v2/YOUR_KEY
+VITE_RPC_URL_BASE_SEPOLIA=https://sepolia.base.org
+VITE_DEFAULT_CHAIN_ID=84532
 VITE_ENABLE_TESTNET=true
 
-# Contract addresses (Sepolia)
-VITE_ACE_CONTRACT_ADDRESS=0x746245858A5A5bCccfd0bdAa228b1489908b9546
-VITE_CRE_CONTRACT_ADDRESS=0x00f1f1C16e1431FFaAc3d44c608EFb5F8Db257A4
-VITE_MARKETPLACE_ADDRESS=0x3b1bBb196e65BE66c2fB18DB70A3513c1dDeB288
-VITE_LEAD_NFT_ADDRESS=0xB93A1Ff499BdEaf74710F760Eb2B6bc5b62f8546
-VITE_ESCROW_ADDRESS_SEPOLIA=0x19B7a082e93B096B0516FA46E67d4168DdCD9004
+# ── Contract Addresses (Sepolia) ─────────────────────────
+VITE_MARKETPLACE_ADDRESS_SEPOLIA=
+VITE_LEAD_NFT_ADDRESS_SEPOLIA=
+VITE_ESCROW_ADDRESS_SEPOLIA=
+VITE_ACE_ADDRESS_SEPOLIA=
+VITE_VERTICAL_NFT_ADDRESS_SEPOLIA=
 
-# Analytics Mock Toggle
-# Set to "true" to use seeded deterministic mock data in analytics dashboards.
-# Set to "false" (or omit) to call the real backend API.
-# ⚠️  IGNORED in production builds (import.meta.env.PROD=true).
+# ── Contract Addresses (Base Sepolia) ────────────────────
+VITE_MARKETPLACE_ADDRESS_BASE=
+VITE_LEAD_NFT_ADDRESS_BASE=
+VITE_ESCROW_ADDRESS_BASE=
+VITE_ACE_ADDRESS_BASE=
+VITE_VERTICAL_NFT_ADDRESS_BASE=
+
+# ── Block Explorer ───────────────────────────────────────
+VITE_BLOCK_EXPLORER_URL=https://sepolia.basescan.org
+
+# ── Platform ─────────────────────────────────────────────
+VITE_PLATFORM_WALLET_ADDRESS=
+
+# ── Feature Flags ────────────────────────────────────────
+VITE_NFT_ENABLED=true
+VITE_DEMO_MODE=false
 VITE_USE_MOCK_DATA=false
+
+# ── Monitoring (optional) ────────────────────────────────
+# VITE_SENTRY_DSN=
+
