--- a/render.yaml
+++ b/render.yaml
@@ -47,6 +47,8 @@ services:
         sync: false
       - key: DEPLOYER_PRIVATE_KEY
         sync: false
+      - key: CRE_API_KEY
+        sync: false
       - key: MARKETPLACE_ADDRESS
         sync: false
       - key: PRIVACY_ENCRYPTION_KEY
