--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,7 +1,7 @@
 {
     "$schema": "https://openapi.vercel.sh/vercel.json",
     "framework": "vite",
-    "installCommand": "rm -f package-lock.json && npm install",
+    "installCommand": "npm install",
     "buildCommand": "npm run build",
     "outputDirectory": "dist",
     "rewrites": [
