--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
     "main": "dist/index.js",
     "scripts": {
         "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-        "build": "npx prisma generate && npx prisma db push --accept-data-loss && tsc",
+        "build": "./node_modules/.bin/prisma generate && ./node_modules/.bin/prisma db push --accept-data-loss && tsc",
         "start": "node dist/index.js",
         "lint": "eslint src --ext .ts",
         "test": "jest",
