--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
     "main": "dist/index.js",
     "scripts": {
         "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-        "build": "./node_modules/.bin/prisma generate && ./node_modules/.bin/prisma db push --accept-data-loss && tsc",
+        "build": "npx prisma@5 generate && npx prisma@5 db push --accept-data-loss && tsc",
         "start": "node dist/index.js",
         "lint": "eslint src --ext .ts",
         "test": "jest",
@@ -42,6 +42,7 @@
         "node-cron": "^4.2.1",
         "socket.io": "^4.7.4",
         "swagger-ui-express": "^5.0.1",
+        "prisma": "^5.10.2",
         "uuid": "^9.0.1",
         "zod": "^3.25.76"
     },
@@ -63,7 +64,6 @@
         "cross-env": "^10.1.0",
         "eslint": "^8.57.0",
         "jest": "^29.7.0",
-        "prisma": "^5.10.2",
         "socket.io-client": "^4.7.4",
         "supertest": "^7.2.2",
         "ts-jest": "^29.1.2",
