fix: move @types/* and faker to dependencies; exclude tests from tsconfig for Render build

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -25,6 +25,9 @@
     ],
     "exclude": [
         "node_modules",
-        "dist"
+        "dist",
+        "**/__tests__/**",
+        "**/*.test.ts",
+        "**/*.spec.ts"
     ]
 }
