--- a/backend/package.json
+++ b/backend/package.json
@@ -26,10 +26,18 @@
         "demo:clear": "tsx scripts/seed-demo-leads.ts clear"
     },
     "dependencies": {
+        "@faker-js/faker": "^10.3.0",
         "@langchain/community": "^1.1.15",
         "@langchain/core": "^1.1.24",
         "@langchain/openai": "^1.2.7",
         "@prisma/client": "^5.10.2",
+        "@types/cors": "^2.8.17",
+        "@types/express": "^4.17.21",
+        "@types/jsonwebtoken": "^9.0.6",
+        "@types/node": "^20.11.24",
+        "@types/node-cron": "^3.0.11",
+        "@types/swagger-ui-express": "^4.1.8",
+        "@types/uuid": "^9.0.8",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "ethers": "^6.11.1",
@@ -40,23 +48,16 @@
         "jsonwebtoken": "^9.0.2",
         "langchain": "^1.2.24",
         "node-cron": "^4.2.1",
+        "prisma": "^5.10.2",
         "socket.io": "^4.7.4",
         "swagger-ui-express": "^5.0.1",
-        "prisma": "^5.10.2",
+        "typescript": "^5.4.2",
         "uuid": "^9.0.1",
         "zod": "^3.25.76"
     },
     "devDependencies": {
-        "@faker-js/faker": "^10.3.0",
-        "@types/cors": "^2.8.17",
-        "@types/express": "^4.17.21",
         "@types/jest": "^30.0.0",
-        "@types/jsonwebtoken": "^9.0.6",
-        "@types/node": "^20.11.24",
-        "@types/node-cron": "^3.0.11",
         "@types/supertest": "^6.0.3",
-        "@types/swagger-ui-express": "^4.1.8",
-        "@types/uuid": "^9.0.8",
         "@typescript-eslint/eslint-plugin": "^8.55.0",
         "@typescript-eslint/parser": "^8.55.0",
         "artillery": "^2.0.5",
@@ -68,7 +69,6 @@
         "supertest": "^7.2.2",
         "ts-jest": "^29.1.2",
         "ts-node": "^10.9.2",
-        "ts-node-dev": "^2.0.0",
-        "typescript": "^5.4.2"
+        "ts-node-dev": "^2.0.0"
     }
 }
