--- a/backend/.env.example
+++ b/backend/.env.example
@@ -86,12 +86,13 @@ USE_MOCK_DATA=false
 # Set the real key in your hosting platform's env vars — never commit it.
 KIMI_API_KEY=sk-...
 
-# Confidential HTTP — Experimental (STUB only)
-# Enables the Confidential HTTP workflow for quality scoring.
-# When true, scoring data is fetched through the CHTT client stub
-# (simulated enclave execution). When false (default), direct DB scoring is used.
+# Confidential HTTP — Enabled by default (Phase 1 CHTT Integration)
+# When true, lead scoring fetches fraud signals (phone/email/conversion intelligence)
+# through the Confidential HTTP workflow stub (simulated TEE enclave execution).
+# Provenance stored in lead.parameters._chtt JSONB. TEE badge shown on lead cards.
+# When false, direct DB scoring is used (no fraud-signal enrichment).
 # Reference: https://docs.chain.link/cre/capabilities/confidential-http-ts
-USE_CONFIDENTIAL_HTTP=false
+USE_CONFIDENTIAL_HTTP=true
 
 # Bounty Functions — Experimental
 # Enables Chainlink Functions-based bounty matching.
