feat: live ZK Functions + On-Chain Proofs section
- CREVerifier.sol: convert requestZKProofVerification from stub to live
  Chainlink Functions dispatch (_sendRequest, ZKVerificationRequested event,
  _zkFraudSignals mapping, getZKFraudSignal view, two hex-encoding helpers)
- Deploy new CREVerifier (0xfec22A5159E077d7016AAb5fC3E91e0124393af8, nonce 2328)
  with ZK Groth16/Plonk fraud-signal JS source registered via setSourceCode(3, ...)
- PersonalEscrowVault.sol: Chainlink Data Feeds USDC/ETH liveness guard on
  lockForBid + settleBid
- LeadNFTv2.sol: EIP-2981 royalty support
- Fix deploy-base-sepolia.ts: await waitForDeployment() before reading tx hash
- Add scripts: deploy-cre-only.ts, deploy-vault-only.ts, set-zk-source.ts
- README.md: add On-Chain Proofs section (table, descriptions, verify commands);
  update Chainlink integration status to six services
- Remove outdated ZK stub note from README

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -43,7 +43,10 @@ VRF_TIE_BREAKER_ADDRESS=
 BOUNTY_MATCHER_ADDRESS=
 BOUNTY_POOL_ADDRESS=
 
-# CRE DON API Key (for Chainlink Functions scoring-data endpoint)
+# Block Explorer API Keys
+BASESCAN_API_KEY=
+
+
 CRE_API_KEY=
 
 # USDC Contract Addresses
