--- a/contracts/package.json
+++ b/contracts/package.json
@@ -30,6 +30,8 @@
         "typechain": "^8.3.2"
     },
     "dependencies": {
-        "@chainlink/functions-toolkit": "^0.3.2"
+        "@chainlink/ace": "github:smartcontractkit/chainlink-ace",
+        "@chainlink/functions-toolkit": "^0.3.2",
+        "@openzeppelin/contracts-upgradeable": "^5.4.0"
     }
 }
