--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,7 +42,8 @@
         "tailwind-merge": "^2.6.1",
         "viem": "^2.8.4",
         "wagmi": "^2.5.7",
-        "zod": "^3.22.4"
+        "zod": "^3.22.4",
+        "zustand": "^4.5.7"
     },
     "devDependencies": {
         "@types/react": "^18.2.64",
@@ -63,8 +64,8 @@
         "vite": "^5.1.4"
     },
     "optionalDependencies": {
+        "@esbuild/linux-x64": "^0.19.0",
         "@rollup/rollup-linux-x64-gnu": "^4.0.0",
-        "@rollup/rollup-linux-x64-musl": "^4.0.0",
-        "@esbuild/linux-x64": "^0.19.0"
+        "@rollup/rollup-linux-x64-musl": "^4.0.0"
     }
 }
