chore: remove temp working markdown files from root

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -114,3 +114,9 @@ MCP_SERVER_URL=http://localhost:3002
 
 # Test Mode — bypass certain guards in development
 TEST_MODE=false
+
+# ── One Click Demo — Control Panel ───────────────────────────────────────────
+# Set VITE_DEMO_MODE=true in the Vercel/Render frontend environment variables
+# to enable the floating Demo Control Panel button in production/staging builds.
+# (In local DEV mode the panel is always visible regardless of this setting.)
+VITE_DEMO_MODE=false
