feat: Kimi AI agent wallet (Wallet 10) + agent bid visibility + roadmap scaling
- Assign Wallet 10 (0x7be5ce) as Kimi agent identity  already pre-funded
  and recycled by the existing demo loop, zero new infrastructure needed
- Add POST /api/demo/seed-agent endpoint: idempotent upsert of User,
  BuyerProfile, EscrowVault, and 1-year Session token; returns env-ready block
- Add demo-agent-rules.ts: ensureKimiAgentRules() upserts auto-bid pref sets
  for all demo verticals (US geo,  bid,  cap, /day budget)
- Wire ensureKimiAgentRules() into runFullDemo() startup  fires before drip,
  emits  Kimi AI agent active to Dev Log
- Add seed-agent-buyer.ts: standalone script for local seed when DB is reachable
- DevLogPanel: agent:bid:placed gets orange  Agent badge, direct socket
  listener, added to JUDGE_ALLOW list
- RTB engine: emits agent:bid:placed socket event for each AI agent bid
- auto-bid.service.ts: emits ace:dev-log action agent:bid:placed for Dev Log
- backend/src/index.ts: wire rtbEngine.io to SocketServer
- ROADMAP.md: integrate 5 new scaling considerations (Distributed Bid
  Scheduling, Persistent Lock Registry, Event-Driven Settlement, Socket.IO
  sharding 1k-5k conns, Bid Batching 1-3 TPS target)

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -120,3 +120,11 @@ TEST_MODE=false
 # to enable the floating Demo Control Panel button in production/staging builds.
 # (In local DEV mode the panel is always visible regardless of this setting.)
 VITE_DEMO_MODE=false
+
+# ── Kimi AI Agent (Demo Buyer) ───────────────────────────────────────────────
+# Wallet 12 — dedicated to the Kimi AI agent. Never used as a demo buyer/seller.
+# Run:  npx ts-node src/scripts/seed-agent-buyer.ts
+# Then copy the printed values here.
+KIMI_AGENT_WALLET=0x28C2105E59D80a15a919CA33A6BE6Ef9FE3e05d1
+KIMI_AGENT_USER_ID=              # printed by seed-agent-buyer.ts
+KIMI_AGENT_BUYER_PROFILE_ID=     # printed by seed-agent-buyer.ts — used by ensureKimiAgentRules()
