--- a/mcp-server/.env.example
+++ b/mcp-server/.env.example
@@ -4,9 +4,17 @@
 # ═══════════════════════════════════════════════════════
 
 API_BASE_URL=http://localhost:3001
-API_KEY=your-api-key
+
+# API_KEY — the Kimi agent's session token (used as Bearer JWT by the MCP server).
+# Generate by running:  npx ts-node src/scripts/seed-agent-buyer.ts
+# Copy the printed value (API_KEY=...) from the output.
+API_KEY=your-session-token-from-seed-script
+
 MCP_PORT=3002
 
 # Kimi K2.5 (Moonshot AI) — used by the /chat agent endpoint
 # Set the real key in your hosting platform's env vars — never commit it.
 KIMI_API_KEY=sk-...
+
+# Agent identity (for X-Agent-Id header — informational only)
+KIMI_AGENT_WALLET=0x28C2105E59D80a15a919CA33A6BE6Ef9FE3e05d1
