fix: stable PRIVACY_ENCRYPTION_KEY in render.yaml + Render secrets (production hygiene)

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -76,7 +76,11 @@ PLATFORM_WALLET_ADDRESS=0xYourPlatformWalletAddress  # Wallet that owns minted v
 CHAINLINK_PRICE_FEED_ADDRESS=                         # ETH/USD or USDC/USD feed address (simulated if empty)
 
 # Privacy Suite
-PRIVACY_ENCRYPTION_KEY=generate-with-openssl-rand-hex-32
+# CRITICAL: Generate ONCE with `openssl rand -hex 32`, paste into Render dashboard,
+# and NEVER rotate it. Changing this key makes all previously encrypted lead PII
+# permanently unreadable. Keep a secure backup (1Password / AWS Secrets Manager).
+# Do NOT use generateValue:true in render.yaml — that regenerates on every deploy.
+PRIVACY_ENCRYPTION_KEY=your-64-char-hex-key-here-generate-with-openssl-rand-hex-32
 
 # Block Explorer Verification
 ETHERSCAN_API_KEY=
@@ -105,9 +109,10 @@ KIMI_API_KEY=sk-...
 # Reference: https://docs.chain.link/cre/capabilities/confidential-http-ts
 USE_CONFIDENTIAL_HTTP=true
 
-# Bounty Functions — Experimental
-# Enables Chainlink Functions-based bounty matching.
-BOUNTY_FUNCTIONS_ENABLED=false
+# Bounty Functions — Enabled (Chainlink Functions, BountyMatcher on Base Sepolia)
+# Set BOUNTY_FUNCTIONS_ENABLED=false in local dev unless you want live DON calls.
+BOUNTY_FUNCTIONS_ENABLED=true
+FUNCTIONS_SUBSCRIPTION_ID=581
 
 # MCP Agent Server
 MCP_SERVER_URL=http://localhost:3002
