--- a/mcp-server/package.json
+++ b/mcp-server/package.json
@@ -13,6 +13,7 @@
         "@types/express": "^4.17.21",
         "@types/node": "^20.10.0",
         "express": "^4.18.2",
+        "socket.io-client": "^4.8.3",
         "typescript": "^5.3.2"
     },
     "devDependencies": {
