--- a/backend/package.json
+++ b/backend/package.json
@@ -38,12 +38,14 @@
         "@types/node-cron": "^3.0.11",
         "@types/swagger-ui-express": "^4.1.8",
         "@types/uuid": "^9.0.8",
+        "bullmq": "^5.70.1",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "ethers": "^6.11.1",
         "express": "^4.18.3",
         "express-rate-limit": "^7.2.0",
         "helmet": "^7.1.0",
+        "ioredis": "^5.9.3",
         "js-yaml": "^4.1.1",
         "jsonwebtoken": "^9.0.2",
         "langchain": "^1.2.24",
