--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,6 +36,10 @@ jobs:
       - name: Install dependencies
         run: npm ci --force
 
+      - name: Generate Prisma client
+        working-directory: backend
+        run: npx prisma generate
+
       - name: Lint backend
         working-directory: backend
         run: npx eslint src --ext .ts
