feat: CRE Demo Polish + Winner-Only PII Decryption
Part 1: Persistent On-Chain Log
- DevLogPanel: demo:cre-evaluation listener renders CRE DON entries with Basescan links
- ONCHAIN_ALLOW filter: added 'cre don', '7-gate', 'buyer rules matched' keywords
- DemoPanel transient badge shortened to 3s

Part 2: CRE-Native as 1-Click Default
- POST /full-e2e auto-sets creNativeDemoMode=true before starting demo
- runFullDemo() accepts creNativeMode param, triggers triggerBuyerRulesWorkflow() on each drip lead
- demo:cre-evaluation + demo:log emitted for every evaluated lead

Part 3: Winner-Only PII Decryption
- NEW: cre-workflows/DecryptForWinner/ (conf-http-demo pattern, encryptOutput: true)
- NEW: POST /leads/:leadId/decrypt-pii (verifies escrowReleased, returns PII + attestation)
- DemoPanel: Decrypt Lead Data button + inline PII display with CRE DON attestation badge
- api.ts: demoDecryptPII(leadId) method

Part 4: Documentation
- README: 1-click default, DecryptForWinner key files
- CHAINLINK_SERVICES_AUDIT: DecryptForWinner audit row
- project.yaml: workflow listing

--- a/cre-workflows/project.yaml
+++ b/cre-workflows/project.yaml
@@ -6,6 +6,7 @@
 #
 # Workflows:
 #   - EvaluateBuyerRulesAndMatch: Buyer rule evaluation + matching
+#   - DecryptForWinner: Winner-only PII decryption (encryptOutput: true)
 #
 # Reference: cre-templates/conf-http-demo/project.yaml
 
